5report/7/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | letexpression
   3           | LET inbeforeexpr IN expr SEMISEMI
   4           | LET letandexpr SEMISEMI

   5  inbeforeexpr : var EQ expr LETAND inbeforeexpr
   6               | var EQ expr

   7  letandexpr : var EQ expr LETAND inbeforeexpr

   8  letexpression : LET var EQ expr letexpression
   9                | LET var EQ expr SEMISEMI

  10  expr : IF expr THEN expr ELSE expr
  11       | arith_expr EQ arith_expr
  12       | arith_expr LT arith_expr
  13       | boolian_expr

  14  boolian_expr : boolian_expr OR factor2_expr
  15               | factor2_expr

  16  factor2_expr : factor2_expr AND arith_expr
  17               | arith_expr

  18  arith_expr : arith_expr PLUS factor_expr
  19             | arith_expr MINUS factor_expr
  20             | factor_expr

  21  factor_expr : factor_expr TIMES atomic_expr
  22              | factor_expr DIV atomic_expr
  23              | atomic_expr

  24  atomic_expr : INT
  25              | BOOL
  26              | ID
  27              | LPAR expr RPAR

  28  var : ID

  29  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (29)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	.  error

	toplevel  goto 9
	expr  goto 10
	letexpression  goto 11
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (24)

	.  reduce 24


state 4
	atomic_expr : BOOL .  (25)

	.  reduce 25


state 5
	atomic_expr : ID .  (26)

	.  reduce 26


state 6
	toplevel : LET . inbeforeexpr IN expr SEMISEMI  (3)
	toplevel : LET . letandexpr SEMISEMI  (4)
	letexpression : LET . var EQ expr letexpression  (8)
	letexpression : LET . var EQ expr SEMISEMI  (9)

	ID  shift 17
	.  error

	inbeforeexpr  goto 18
	letandexpr  goto 19
	var  goto 20


state 7
	expr : IF . expr THEN expr ELSE expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 21
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 8
	atomic_expr : LPAR . expr RPAR  (27)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 22
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 9
	%entry% : '\001' toplevel .  (29)

	.  reduce 29


state 10
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 23
	.  error


state 11
	toplevel : letexpression .  (2)

	.  reduce 2


state 12
	expr : arith_expr . EQ arith_expr  (11)
	expr : arith_expr . LT arith_expr  (12)
	factor2_expr : arith_expr .  (17)
	arith_expr : arith_expr . PLUS factor_expr  (18)
	arith_expr : arith_expr . MINUS factor_expr  (19)

	PLUS  shift 24
	MINUS  shift 25
	EQ  shift 26
	LT  shift 27
	LET  reduce 17
	IN  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17
	AND  reduce 17
	OR  reduce 17
	LETAND  reduce 17


state 13
	expr : boolian_expr .  (13)
	boolian_expr : boolian_expr . OR factor2_expr  (14)

	OR  shift 28
	LET  reduce 13
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13
	LETAND  reduce 13


state 14
	boolian_expr : factor2_expr .  (15)
	factor2_expr : factor2_expr . AND arith_expr  (16)

	AND  shift 29
	LET  reduce 15
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15
	OR  reduce 15
	LETAND  reduce 15


state 15
	arith_expr : factor_expr .  (20)
	factor_expr : factor_expr . TIMES atomic_expr  (21)
	factor_expr : factor_expr . DIV atomic_expr  (22)

	TIMES  shift 30
	DIV  shift 31
	LET  reduce 20
	IN  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	EQ  reduce 20
	LT  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	SEMISEMI  reduce 20
	AND  reduce 20
	OR  reduce 20
	LETAND  reduce 20


state 16
	factor_expr : atomic_expr .  (23)

	.  reduce 23


state 17
	var : ID .  (28)

	.  reduce 28


state 18
	toplevel : LET inbeforeexpr . IN expr SEMISEMI  (3)

	IN  shift 32
	.  error


state 19
	toplevel : LET letandexpr . SEMISEMI  (4)

	SEMISEMI  shift 33
	.  error


state 20
	inbeforeexpr : var . EQ expr LETAND inbeforeexpr  (5)
	inbeforeexpr : var . EQ expr  (6)
	letandexpr : var . EQ expr LETAND inbeforeexpr  (7)
	letexpression : LET var . EQ expr letexpression  (8)
	letexpression : LET var . EQ expr SEMISEMI  (9)

	EQ  shift 34
	.  error


state 21
	expr : IF expr . THEN expr ELSE expr  (10)

	THEN  shift 35
	.  error


state 22
	atomic_expr : LPAR expr . RPAR  (27)

	RPAR  shift 36
	.  error


state 23
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 24
	arith_expr : arith_expr PLUS . factor_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 37
	atomic_expr  goto 16


state 25
	arith_expr : arith_expr MINUS . factor_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 38
	atomic_expr  goto 16


state 26
	expr : arith_expr EQ . arith_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 39
	factor_expr  goto 15
	atomic_expr  goto 16


state 27
	expr : arith_expr LT . arith_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 40
	factor_expr  goto 15
	atomic_expr  goto 16


state 28
	boolian_expr : boolian_expr OR . factor2_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 41
	factor2_expr  goto 42
	factor_expr  goto 15
	atomic_expr  goto 16


state 29
	factor2_expr : factor2_expr AND . arith_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 43
	factor_expr  goto 15
	atomic_expr  goto 16


state 30
	factor_expr : factor_expr TIMES . atomic_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 44


state 31
	factor_expr : factor_expr DIV . atomic_expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 45


state 32
	toplevel : LET inbeforeexpr IN . expr SEMISEMI  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 46
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 33
	toplevel : LET letandexpr SEMISEMI .  (4)

	.  reduce 4


state 34
	inbeforeexpr : var EQ . expr LETAND inbeforeexpr  (5)
	inbeforeexpr : var EQ . expr  (6)
	letandexpr : var EQ . expr LETAND inbeforeexpr  (7)
	letexpression : LET var EQ . expr letexpression  (8)
	letexpression : LET var EQ . expr SEMISEMI  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 47
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 35
	expr : IF expr THEN . expr ELSE expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 48
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 36
	atomic_expr : LPAR expr RPAR .  (27)

	.  reduce 27


state 37
	arith_expr : arith_expr PLUS factor_expr .  (18)
	factor_expr : factor_expr . TIMES atomic_expr  (21)
	factor_expr : factor_expr . DIV atomic_expr  (22)

	TIMES  shift 30
	DIV  shift 31
	LET  reduce 18
	IN  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18
	AND  reduce 18
	OR  reduce 18
	LETAND  reduce 18


state 38
	arith_expr : arith_expr MINUS factor_expr .  (19)
	factor_expr : factor_expr . TIMES atomic_expr  (21)
	factor_expr : factor_expr . DIV atomic_expr  (22)

	TIMES  shift 30
	DIV  shift 31
	LET  reduce 19
	IN  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	SEMISEMI  reduce 19
	AND  reduce 19
	OR  reduce 19
	LETAND  reduce 19


state 39
	expr : arith_expr EQ arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (18)
	arith_expr : arith_expr . MINUS factor_expr  (19)

	PLUS  shift 24
	MINUS  shift 25
	LET  reduce 11
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11
	LETAND  reduce 11


state 40
	expr : arith_expr LT arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (18)
	arith_expr : arith_expr . MINUS factor_expr  (19)

	PLUS  shift 24
	MINUS  shift 25
	LET  reduce 12
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12
	LETAND  reduce 12


state 41
	factor2_expr : arith_expr .  (17)
	arith_expr : arith_expr . PLUS factor_expr  (18)
	arith_expr : arith_expr . MINUS factor_expr  (19)

	PLUS  shift 24
	MINUS  shift 25
	LET  reduce 17
	IN  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17
	AND  reduce 17
	OR  reduce 17
	LETAND  reduce 17


state 42
	boolian_expr : boolian_expr OR factor2_expr .  (14)
	factor2_expr : factor2_expr . AND arith_expr  (16)

	AND  shift 29
	LET  reduce 14
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14
	OR  reduce 14
	LETAND  reduce 14


state 43
	factor2_expr : factor2_expr AND arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (18)
	arith_expr : arith_expr . MINUS factor_expr  (19)

	PLUS  shift 24
	MINUS  shift 25
	LET  reduce 16
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16
	AND  reduce 16
	OR  reduce 16
	LETAND  reduce 16


state 44
	factor_expr : factor_expr TIMES atomic_expr .  (21)

	.  reduce 21


state 45
	factor_expr : factor_expr DIV atomic_expr .  (22)

	.  reduce 22


state 46
	toplevel : LET inbeforeexpr IN expr . SEMISEMI  (3)

	SEMISEMI  shift 49
	.  error


state 47
	inbeforeexpr : var EQ expr . LETAND inbeforeexpr  (5)
	inbeforeexpr : var EQ expr .  (6)
	letandexpr : var EQ expr . LETAND inbeforeexpr  (7)
	letexpression : LET var EQ expr . letexpression  (8)
	letexpression : LET var EQ expr . SEMISEMI  (9)

	LET  shift 50
	SEMISEMI  shift 51
	LETAND  shift 52
	IN  reduce 6

	letexpression  goto 53


state 48
	expr : IF expr THEN expr . ELSE expr  (10)

	ELSE  shift 54
	.  error


state 49
	toplevel : LET inbeforeexpr IN expr SEMISEMI .  (3)

	.  reduce 3


state 50
	letexpression : LET . var EQ expr letexpression  (8)
	letexpression : LET . var EQ expr SEMISEMI  (9)

	ID  shift 17
	.  error

	var  goto 55


state 51
	letexpression : LET var EQ expr SEMISEMI .  (9)

	.  reduce 9


state 52
	inbeforeexpr : var EQ expr LETAND . inbeforeexpr  (5)
	letandexpr : var EQ expr LETAND . inbeforeexpr  (7)

	ID  shift 17
	.  error

	inbeforeexpr  goto 56
	var  goto 57


state 53
	letexpression : LET var EQ expr letexpression .  (8)

	.  reduce 8


state 54
	expr : IF expr THEN expr ELSE . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 58
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 55
	letexpression : LET var . EQ expr letexpression  (8)
	letexpression : LET var . EQ expr SEMISEMI  (9)

	EQ  shift 59
	.  error


state 56
	inbeforeexpr : var EQ expr LETAND inbeforeexpr .  (5)
	letandexpr : var EQ expr LETAND inbeforeexpr .  (7)

	IN  reduce 5
	SEMISEMI  reduce 7


state 57
	inbeforeexpr : var . EQ expr LETAND inbeforeexpr  (5)
	inbeforeexpr : var . EQ expr  (6)

	EQ  shift 60
	.  error


state 58
	expr : IF expr THEN expr ELSE expr .  (10)

	.  reduce 10


state 59
	letexpression : LET var EQ . expr letexpression  (8)
	letexpression : LET var EQ . expr SEMISEMI  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 61
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 60
	inbeforeexpr : var EQ . expr LETAND inbeforeexpr  (5)
	inbeforeexpr : var EQ . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 62
	arith_expr  goto 12
	boolian_expr  goto 13
	factor2_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16


state 61
	letexpression : LET var EQ expr . letexpression  (8)
	letexpression : LET var EQ expr . SEMISEMI  (9)

	LET  shift 50
	SEMISEMI  shift 51
	.  error

	letexpression  goto 53


state 62
	inbeforeexpr : var EQ expr . LETAND inbeforeexpr  (5)
	inbeforeexpr : var EQ expr .  (6)

	LETAND  shift 63
	IN  reduce 6
	SEMISEMI  reduce 6


state 63
	inbeforeexpr : var EQ expr LETAND . inbeforeexpr  (5)

	ID  shift 17
	.  error

	inbeforeexpr  goto 64
	var  goto 57


state 64
	inbeforeexpr : var EQ expr LETAND inbeforeexpr .  (5)

	.  reduce 5


23 terminals, 13 nonterminals
30 grammar rules, 65 states
